adds playlist functionality

--- a/client/index.html
+++ b/client/index.html
@@ -9,16 +9,21 @@
 
     <script src="data/data.js"></script>
 
+    <!-- models and collections -->
     <script src="models/SongModel.js"></script>
     <script src="collections/Songs.js"></script>
     <script src="collections/SongQueue.js"></script>
+    <script src="collections/Playlist.js"></script>
     <script src="models/AppModel.js"></script>
 
+    <!-- views -->
     <script src="views/PlayerView.js"></script>
     <script src="views/LibraryView.js"></script>
     <script src="views/LibraryEntryView.js"></script>
     <script src="views/SongQueueView.js"></script>
     <script src="views/SongQueueEntryView.js"></script>
+    <script src="views/PlaylistView.js"></script>
+    <script src="views/PlaylistEntryView.js"></script>
     <script src="views/AppView.js"></script>
 
     <script>
