--- a/client/index.html
+++ b/client/index.html
@@ -14,23 +14,31 @@
     <script src="collections/Songs.js"></script>
     <script src="collections/SongQueue.js"></script>
     <script src="collections/Playlist.js"></script>
+    <script src="models/PlaylistLibrary.js"></script>
     <script src="models/AppModel.js"></script>
 
     <!-- views -->
     <script src="views/PlayerView.js"></script>
     <script src="views/LibraryView.js"></script>
     <script src="views/LibraryEntryView.js"></script>
+    <script src="views/PlaylistLibraryEntryView.js"></script>
     <script src="views/SongQueueView.js"></script>
     <script src="views/SongQueueEntryView.js"></script>
     <script src="views/PlaylistView.js"></script>
+    <script src="views/PlaylistLibraryView.js"></script>
     <script src="views/PlaylistEntryView.js"></script>
+    <script src="views/PlaylistLibraryEntryView.js"></script>
     <script src="views/AppView.js"></script>
 
     <script>
       $(function(){
         // set up model objects
         var library = new Songs(songData);
-        var app = new AppModel({library: library});
+        var playlistLibrary = new PlaylistLibrary();
+        var app = new AppModel({
+                                library: library,
+                                playlistLibrary: playlistLibrary
+                              });
 
         // build a view for the top level of the whole app
         var appView = new AppView({model: app});
